tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00049.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00049.c" (c, x86_64-unknown-linux-gnu)
global x : s32i = 10 [external, default, align 4, dso_local]
global s : rec_S = {1, @x} [external, default, align 8, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %12 = get_global @s : rec_S*
        %13 = get_member %12[0] "a" : s32i*
        %14 = load %13 : s32i, align 8
        %15 = const 1 : s32i
        %16 = cmp ne %14, %15 : bool
        if %16 {
            %17 = const 1 : s32i
            store %17, %0
            %18 = load %0 : s32i
            return %18
        }
        yield
    }
    scope {
        %4 = get_global @s : rec_S*
        %5 = get_member %4[1] "p" : s32i**
        %6 = load %5 : s32i*, align 8
        %7 = load %6 : s32i, align 4
        %8 = const 10 : s32i
        %9 = cmp ne %7, %8 : bool
        if %9 {
            %10 = const 2 : s32i
            store %10, %0
            %11 = load %0 : s32i
            return %11
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
