tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00051.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00051.c" (c, x86_64-unknown-linux-gnu)
global x : s32i = 0 [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %32 = get_global @x : s32i*
        %33 = load %32 : s32i, align 4
        switch %33 {
            case equal 0 {
                yield
            }
        }
        yield
    }
    scope {
        %26 = get_global @x : s32i*
        %27 = load %26 : s32i, align 4
        switch %27 {
            case equal 0 {
                scope {
                    %28 = get_global @x : s32i*
                    %29 = load %28 : s32i, align 4
                    switch %29 {
                        case equal 0 {
                            goto next
                        }
                        case default {
                            %30 = const 1 : s32i
                            store %30, %0
                            %31 = load %0 : s32i
                            return %31
                        }
                    }
                    yield
                }
                yield
            }
        }
        yield
    }
    %2 = const 1 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
    ^bb1():
        label next:
        scope {
            %22 = get_global @x : s32i*
            %23 = load %22 : s32i, align 4
            switch %23 {
                case equal 1 {
                    %24 = const 1 : s32i
                    store %24, %0
                    %25 = load %0 : s32i
                    return %25
                }
            }
            yield
        }
        scope {
            %14 = get_global @x : s32i*
            %15 = load %14 : s32i, align 4
            switch %15 {
            }
            yield
        }
        scope {
            %5 = get_global @x : s32i*
            %6 = load %5 : s32i, align 4
            switch %6 {
                case equal 0 {
                    %11 = get_global @x : s32i*
                    %12 = load %11 : s32i, align 4
                    store %12, %0
                    %13 = load %0 : s32i
                    return %13
                }
                case equal 1 {
                    %9 = const 1 : s32i
                    store %9, %0
                    %10 = load %0 : s32i
                    return %10
                }
                case default {
                    %7 = const 1 : s32i
                    store %7, %0
                    %8 = load %0 : s32i
                    return %8
                }
            }
            yield
        }
        %4 = load %0 : s32i
        return %4
}
