tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00052.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00052.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %3 = alloca rec_T, "s", align 4
        %4 = const 0 : s32i
        %5 = get_member %3[0] "x" : s32i*
        store %4, %5, align 4
        %6 = get_member %3[0] "x" : s32i*
        %7 = load %6 : s32i, align 4
        store %7, %0
        %8 = load %0 : s32i
        return %8
    }
    %2 = load %0 : s32i
    return %2
}
