tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00053.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00053.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_T, "s1", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : s32i
    %4 = get_member %1[0] "x" : s32i*
    store %3, %4, align 4
    scope {
        %7 = alloca rec_T2E0, "s2", align 4
        %8 = const 1 : s32i
        %9 = get_member %7[0] "y" : s32i*
        store %8, %9, align 4
        scope {
            %10 = get_member %1[0] "x" : s32i*
            %11 = load %10 : s32i, align 4
            %12 = get_member %7[0] "y" : s32i*
            %13 = load %12 : s32i, align 4
            %14 = sub %11, %13 : s32i [nsw]
            %15 = const 0 : s32i
            %16 = cmp ne %14, %15 : bool
            if %16 {
                %17 = const 1 : s32i
                store %17, %0
                %18 = load %0 : s32i
                return %18
            }
            yield
        }
        yield
    }
    %5 = const 0 : s32i
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
