tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00055.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00055.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u32i, "e", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %17 = const 0 : s32i
        %18 = const 0 : s32i
        %19 = cmp ne %17, %18 : bool
        if %19 {
            %20 = const 1 : s32i
            store %20, %0
            %21 = load %0 : s32i
            return %21
        }
        yield
    }
    scope {
        %12 = const 2 : s32i
        %13 = const 2 : s32i
        %14 = cmp ne %12, %13 : bool
        if %14 {
            %15 = const 2 : s32i
            store %15, %0
            %16 = load %0 : s32i
            return %16
        }
        yield
    }
    scope {
        %7 = const 3 : s32i
        %8 = const 3 : s32i
        %9 = cmp ne %7, %8 : bool
        if %9 {
            %10 = const 3 : s32i
            store %10, %0
            %11 = load %0 : s32i
            return %11
        }
        yield
    }
    %3 = const 0 : u32i
    store %3, %1, align 4
    %4 = load %1 : u32i, align 4
    %5 = cast(integral) %4 : s32i
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
