tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00058.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00058.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[7] = "abcdef" [cir_private, default, align 1, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i*, "s", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @.str : s8i[7]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    store %4, %1, align 8
    scope {
        %61 = const 0 : s64i
        %62 = load %1 : s8i*, align 8
        %63 = ptr_stride %62, %61 : s8i*
        %64 = load %63 : s8i, align 1
        %65 = cast(integral) %64 : s32i
        %66 = const 97 : s32i
        %67 = cmp ne %65, %66 : bool
        if %67 {
            %68 = const 1 : s32i
            store %68, %0
            %69 = load %0 : s32i
            return %69
        }
        yield
    }
    scope {
        %52 = const 1 : s64i
        %53 = load %1 : s8i*, align 8
        %54 = ptr_stride %53, %52 : s8i*
        %55 = load %54 : s8i, align 1
        %56 = cast(integral) %55 : s32i
        %57 = const 98 : s32i
        %58 = cmp ne %56, %57 : bool
        if %58 {
            %59 = const 2 : s32i
            store %59, %0
            %60 = load %0 : s32i
            return %60
        }
        yield
    }
    scope {
        %43 = const 2 : s64i
        %44 = load %1 : s8i*, align 8
        %45 = ptr_stride %44, %43 : s8i*
        %46 = load %45 : s8i, align 1
        %47 = cast(integral) %46 : s32i
        %48 = const 99 : s32i
        %49 = cmp ne %47, %48 : bool
        if %49 {
            %50 = const 3 : s32i
            store %50, %0
            %51 = load %0 : s32i
            return %51
        }
        yield
    }
    scope {
        %34 = const 3 : s64i
        %35 = load %1 : s8i*, align 8
        %36 = ptr_stride %35, %34 : s8i*
        %37 = load %36 : s8i, align 1
        %38 = cast(integral) %37 : s32i
        %39 = const 100 : s32i
        %40 = cmp ne %38, %39 : bool
        if %40 {
            %41 = const 4 : s32i
            store %41, %0
            %42 = load %0 : s32i
            return %42
        }
        yield
    }
    scope {
        %25 = const 4 : s64i
        %26 = load %1 : s8i*, align 8
        %27 = ptr_stride %26, %25 : s8i*
        %28 = load %27 : s8i, align 1
        %29 = cast(integral) %28 : s32i
        %30 = const 101 : s32i
        %31 = cmp ne %29, %30 : bool
        if %31 {
            %32 = const 5 : s32i
            store %32, %0
            %33 = load %0 : s32i
            return %33
        }
        yield
    }
    scope {
        %16 = const 5 : s64i
        %17 = load %1 : s8i*, align 8
        %18 = ptr_stride %17, %16 : s8i*
        %19 = load %18 : s8i, align 1
        %20 = cast(integral) %19 : s32i
        %21 = const 102 : s32i
        %22 = cmp ne %20, %21 : bool
        if %22 {
            %23 = const 6 : s32i
            store %23, %0
            %24 = load %0 : s32i
            return %24
        }
        yield
    }
    scope {
        %7 = const 6 : s64i
        %8 = load %1 : s8i*, align 8
        %9 = ptr_stride %8, %7 : s8i*
        %10 = load %9 : s8i, align 1
        %11 = cast(integral) %10 : s32i
        %12 = const 0 : s32i
        %13 = cmp ne %11, %12 : bool
        if %13 {
            %14 = const 7 : s32i
            store %14, %0
            %15 = load %0 : s32i
            return %15
        }
        yield
    }
    %5 = const 0 : s32i
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
